# mokke-ink-notes

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DESIGN_DOCS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CLAUDE_CODE_REVIEW_SETUP.md
.github/workflows/: claude.yml  release.yml  wrapper-validation.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/fixtures/: hello_test.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.c
app/src/main/res/drawable/: bg_history_overlay.xml  ic_cue.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_mic_active.xml  ic_mokke.xml  ic_notes.xml  ic_pause.xml  ic_play.xml  ic_redo.xml  ic_screen_rotation.xml  ic_transcript.xml  ic_undo.xml  ic_unfold_more.xml  playback_bar_background.xml  playback_progress_drawable.xml  word_popup_bg.xml
app/src/main/res/layout/: activity_save_as.xml  activity_settings.xml  activity_writing.xml  popup_menu.xml  (+3 more)
app/src/test/resources/: door_to_the_master.inkup  self_service_reorder.inkup  the_gilded_monster_overflow.inkup
docs/: README.md  VISION.md  audio-transcription-design.md  automerge-migration-plan.md  bigme-sdk-reverse-engineered.md  code-review.md  compact-stroke-encoding.md  cornell-notes-design.md  data-format.md  engineering-design.md  hybrid-transcription-plan.md  index.html  inline-text-overlay-design.md  integration-rebuild.md  responsive-layout-design.md  speech-to-text-on-android-eink.md  transcript-anchoring-plan.md  undo-redo-design.md
docs/blog/: bigme-sdk-reverse-engineered.md
docs/design/: audio-transcription.md  compact-stroke-encoding.md  cornell-notes.md  data-format.md  engineering.md  hybrid-transcription.md  pen-lift-optimization.md  responsive-layout.md  stroke-lifecycle.md  undo-redo.md
docs/preso/: README.md
proto/: build.gradle.kts
scripts/: rebuild-integration.sh  review-check.sh  review-pr.sh  update-inksdk.sh  usbipd-attach.sh
tools/corpus/: BigramCompiler.kt  bigrams.gradle.kts
tools/inkup-viewer/: build.gradle.kts  open-inkup.bat  open-inkup.sh
(+301 files in other folders)
